k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storybook
  labels:
    app: storybook
    team: apsferreira
