k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iit-ui-storybook
  namespace: production
  labels:
    app: iit-ui-storybook
spec:
  selector:
    app: iit-ui-storybook
  ports:
    - name: http
      port: 80
      targetPort: http
